--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,104 +1,6 @@
 version: 2
 updates:
-  # Main Orpheus module
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "monday"
-    open-pull-requests-limit: 5
-    reviewers:
-      - "agilira"
-    assignees:
-      - "agilira"
-    labels:
-      - "dependencies"
-      - "go"
-    commit-message:
-      prefix: "deps"
-      include: "scope"
-
-  # Benchmarks module
-  - package-ecosystem: "gomod"
-    directory: "/benchmarks"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-    open-pull-requests-limit: 3
-    reviewers:
-      - "agilira"
-    assignees:
-      - "agilira"
-    labels:
-      - "dependencies"
-      - "benchmarks"
-    commit-message:
-      prefix: "deps(benchmarks)"
-
-  # Examples - filemanager
-  - package-ecosystem: "gomod"
-    directory: "/examples/filemanager"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-    open-pull-requests-limit: 3
-    reviewers:
-      - "agilira"
-    assignees:
-      - "agilira"
-    labels:
-      - "dependencies"
-      - "examples"
-    commit-message:
-      prefix: "deps(examples/filemanager)"
-
-  # Examples - gitlike
-  - package-ecosystem: "gomod"
-    directory: "/examples/gitlike"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-    open-pull-requests-limit: 3
-    reviewers:
-      - "agilira"
-    assignees:
-      - "agilira"
-    labels:
-      - "dependencies"
-      - "examples"
-    commit-message:
-      prefix: "deps(examples/gitlike)"
-
-  # Examples - enhanced-errors
-  - package-ecosystem: "gomod"
-    directory: "/examples/enhanced-errors"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-    open-pull-requests-limit: 3
-    reviewers:
-      - "agilira"
-    assignees:
-      - "agilira"
-    labels:
-      - "dependencies"
-      - "examples"
-    commit-message:
-      prefix: "deps(examples/enhanced-errors)"
-
-  # GitHub Actions dependencies
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-    open-pull-requests-limit: 3
-    reviewers:
-      - "agilira"
-    assignees:
-      - "agilira"
-    labels:
-      - "dependencies"
-      - "github-actions"
-    commit-message:
-      prefix: "deps(actions)"
+      interval: "daily"
