--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.21'
+        go-version: '1.23'
         cache: true
 
     - name: Install Dependencies
@@ -44,13 +44,13 @@ jobs:
       run: staticcheck ./...
 
     - name: Revive (Golint replacement)
-      run: revive -config revive.toml ./... || true
+      run: revive ./... || true
 
     - name: Security Scan (gosec)
       continue-on-error: true
       run: |
         echo "Running security scan..."
-        gosec -conf .gosec.json ./... || true
+        gosec ./... || true
         echo "✅ Security scan completed"
 
     - name: Test with Race Detection
@@ -62,9 +62,9 @@ jobs:
         go tool cover -func=coverage.out
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v5
+      uses: codecov/codecov-action@v4
       with:
-        file: ./coverage.out
+        files: ./coverage.out
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
@@ -76,7 +76,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        go-version: ['1.21']  # Reduced to save minutes
+        go-version: ['1.23']
     steps:
     - name: Checkout
       uses: actions/checkout@v5
