Fix Codecov configuration to prevent false failures
- Add .codecov.yml configuration file to control coverage targets and thresholds
- Set informational: true for status checks to prevent CI failures
- Configure 1% threshold with auto target for flexible coverage requirements
- Ignore test files, examples, and benchmarks from coverage calculations
- Enhanced Codecov upload action with verbose logging

This resolves the issue where Codecov was showing X (failure) status even without explicit coverage targets set.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,8 @@ jobs:
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
+        verbose: true
+        disable_search: false
 
   build:
     name: Build Matrix
