--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -36,4 +36,4 @@ jobs:
       run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
     - name: Security Scan
-      run: gosec --exclude=G104,G306,G301 ./...
+      run: gosec ./...
